--- a/config/app.yml
+++ b/config/app.yml
@@ -14,5 +14,9 @@ timeout:
   RedisOnlineTime: 4  #缓存的在线用户时长   单位H
 
 port:
-  server: ":8082"
+  server: 8883
   udp: 3001
+
+nacos:
+  Ip: 127.0.0.1
+  Port: 8848
